# zeldex

./: Cargo.toml  README.md  flake.nix  zellij.kdl
src/: codex.rs  codex_cache.rs  codex_fs.rs  lib.rs  main.rs  native.rs  render.rs  status.rs  status_file.rs
