[package]
name = "zeldex"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[features]
default = []
native = ["dep:anyhow", "dep:tungstenite"]

[[bin]]
name = "zeldex"
path = "src/main.rs"

[[bin]]
name = "zeldex-codex"
path = "src/bin/zeldex-codex.rs"
required-features = ["native"]

[[bin]]
name = "zeldex-status"
path = "src/bin/zeldex-status.rs"
required-features = ["native"]

[dependencies]
ansi_term = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.24", optional = true }
unicode-width = "0.1"
zellij-tile = "0.44.0"
zellij-tile-utils = "0.44.0"
anyhow = { version = "1", optional = true }
