[package]
name = "zeldex"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[[bin]]
name = "zeldex"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
zellij-tile = "0.44.0"
zellij-tile-utils = "0.44.0"
